# imv2

./: .gitignore  AUTHORS  CHANGELOG  CONTRIBUTING  PACKAGERS.md  README.md  install.sh  lsan.supp  meson.build  meson_options.txt
.builds/: archlinux.yml  debian.yml  fedora.yml  freebsd.yml
contrib/: imv-dir
doc/: imv-dir.1.txt  imv-msg.1.txt  imv.1.txt  imv.5.txt
files/: imv-dir.desktop.in  imv.desktop.in  imv.in
src/: backend.h  backend_farbfeld.c  backend_libheif.c  backend_libjpeg.c  backend_libjxl.c  backend_libnsbmp.c  backend_libnsgif.c  backend_libpng.c  backend_libtiff.c  backend_libwebp.c  backend_qoi.c  backends.c  backends.h  bitmap.c  bitmap.h  canvas.c  canvas.h  console.c  dummy_window.c  image.c  image.h  imv.c  imv.h  imv_msg.c  main.c  navigator.c  navigator.h  platform.h  platform_dummy.c  platform_dummy.h  platform_posix.c  source.c  source.h  thumbs.c  thumbs.h  viewport.c  viewport.h  window.h  wl_window.c  x11_window.c
test/: backends.c  navigator.c
test/data/: sample.tiff
